include mirror effect

--- a/binarization.ipynb
+++ b/binarization.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ fotos/00a6e44d-4ff7-409d-9d4f-4a4073b06767/28.jpg -> fotos_binarizadas_limpias_test/00a6e44d-4ff7-409d-9d4f-4a4073b06767/28.jpg\n",
+      "✅ fotos/00a6e44d-4ff7-409d-9d4f-4a4073b06767/27.jpg -> fotos_binarizadas_limpias_test/00a6e44d-4ff7-409d-9d4f-4a4073b06767/27.jpg\n",
+      "✅ fotos/00a6e44d-4ff7-409d-9d4f-4a4073b06767/26.jpg -> fotos_binarizadas_limpias_test/00a6e44d-4ff7-409d-9d4f-4a4073b06767/26.jpg\n",
+      "✨ Proceso completado\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2, os, numpy as np\n",
     "from math import pi\n",
@@ -85,9 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Carpeta procesada: 00a6e44d-4ff7-409d-9d4f-4a4073b06767 -> in_00a6e44d-4ff7-409d-9d4f-4a4073b06767\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "from pathlib import Path\n",
@@ -95,16 +114,13 @@
     "def mirror_images_with_prefix(base_dir: str, exts={\".jpg\", \".jpeg\", \".png\", \".bmp\", \".tif\", \".tiff\"}):\n",
     "    base = Path(base_dir)\n",
     "\n",
-    "    # Iterar sobre todas las carpetas dentro de base_dir\n",
     "    for folder in base.iterdir():\n",
     "        if not folder.is_dir():\n",
     "            continue\n",
     "\n",
-    "        # Crear carpeta de salida con prefijo \"in_\"\n",
     "        out_folder = base / f\"in_{folder.name}\"\n",
     "        out_folder.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "        # Procesar imágenes dentro de la carpeta\n",
     "        for file in folder.glob(\"*\"):\n",
     "            if file.suffix.lower() not in exts:\n",
     "                continue\n",
@@ -113,18 +129,15 @@
     "            if img is None:\n",
     "                continue\n",
     "\n",
-    "            # 🔹 Espejo horizontal\n",
     "            mirrored = cv2.flip(img, 1)\n",
     "\n",
-    "            # Guardar con el mismo nombre en la carpeta de salida\n",
     "            out_path = out_folder / file.name\n",
     "            cv2.imwrite(str(out_path), mirrored)\n",
     "\n",
     "        print(f\"✅ Carpeta procesada: {folder.name} -> {out_folder.name}\")\n",
     "\n",
     "\n",
-    "# === USO ===\n",
-    "BASE_DIR = \"fotos\"   # Aquí está carpeta1, carpeta2, carpeta3, etc.\n",
+    "BASE_DIR = \"fotos_binarizadas_limpias\"\n",
     "mirror_images_with_prefix(BASE_DIR)"
    ]
   },
