--- a/tracker.ipynb
+++ b/tracker.ipynb
@@ -489,7 +489,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3) Preprocesado: features, velocidades, normalización"
+    "# Preprocesado: features, velocidades, normalización\n",
+    "\n",
+    "Ese bloque de construcción de features es fundamental porque transforma las coordenadas y áreas crudas de la pelota en información normalizada, suave y enriquecida con dinámica temporal, que el modelo puede interpretar de manera consistente. Al escalar x y y a [0,1] e invertir el eje vertical, se eliminan dependencias del tamaño y orientación de la imagen; al incluir el área normalizada se aporta una señal de “profundidad” o tamaño aparente; y al derivar velocidades vx, vy tras un filtrado de Savitzky–Golay se captura la dirección y ritmo del movimiento sin amplificar el ruido de pixelación. En conjunto, este preprocesamiento le da al GRU entradas estables y físicamente significativas, facilitando que aprenda patrones de trayectoria más realistas y que generalice mejor entre datos reales y sintéticos."
    ]
   },
   {
@@ -541,7 +543,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4) Split por Lanzamiento"
+    "# Split por Lanzamiento\n",
+    "\n",
+    "Ese fragmento se encarga de dividir los datos en conjuntos de entrenamiento, validación y prueba de manera ordenada y aleatoria, respetando la unidad natural de los datos: cada lanzamiento completo. Primero se listan todos los identificadores de secuencias, Después, se calcula el total de secuencias y se asigna aproximadamente un 70% a entrenamiento, un 20% a validación y el 10% restante a prueba.\n",
+    "\n",
+    "Al hacer la partición por ID de lanzamiento y no por ventanas internas, se evita que una misma trayectoria aparezca en más de un conjunto, lo que protege contra data leakage y garantiza que las métricas de validación y prueba reflejen la capacidad real de generalización del modelo."
    ]
   },
   {
@@ -577,7 +583,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5) Dataset con ventanas (T_in → T_out)"
+    "# Dataset con ventanas (T_in → T_out)\n",
+    "\n",
+    "Aqui se define cómo se preparan los ejemplos concretos que el modelo va a ver en entrenamiento, validación y prueba. Al apilar todas estas ventanas, se generan cientos o miles de pares entrada–salida a partir de pocas trayectorias largas, lo que amplía el dataset sin necesidad de más grabaciones. La división en train_ds, val_ds y test_ds garantiza que el modelo se entrene con un conjunto, se valide con otro distinto y se evalúe con un tercero, permitiendo medir de forma justa su capacidad de generalización a trayectorias nunca vistas."
    ]
   },
   {
@@ -626,7 +634,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6) DataModule (Lightning)"
+    "# DataModule (Lightning)\n",
+    "\n",
+    "El BallDataModule es organiza y centraliza cómo se cargan los datos para el entrenamiento, validación y prueba del modelo. Permite separar claramente la lógica de datos del resto del código, asegura que cada conjunto se use de la manera correcta y hace que el entrenamiento sea más ordenado, reproducible y fácil de manejar en PyTorch Lightning."
    ]
   },
   {
@@ -661,7 +671,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7) Modelo GRU (LightningModule) + pérdida con suavidad de velocidad"
+    "# Modelo GRU (LightningModule) + pérdida con suavidad de velocidad\n",
+    "\n",
+    "GRUTraj es el corazón del sistema: toma la secuencia de features de la pelota y predice las próximas posiciones. Usa una GRU para capturar la dinámica temporal y un head lineal para convertir el estado latente en coordenadas futuras. Además, su forward combina media y máximo sobre el tiempo para resumir bien la historia reciente, y la función de pérdida pondera más el último paso y penaliza cambios bruscos, favoreciendo trayectorias suaves y realistas. Con los callbacks de métricas y el scheduler, entrena de forma estable y ajusta el learning rate cuando se estanca, logrando mejor generalización."
    ]
   },
   {
@@ -803,21 +815,16 @@
     }
    ],
    "source": [
-    "# 1) Unir a tus sequences_raw (que están en PIXELES)\n",
     "sequences_raw_aug = sequences_raw.copy()\n",
     "sequences_raw_aug.update(synthetic_dict)\n",
     "\n",
-    "# 2) Re-hacer features normalizados para TODOS (usar tu función existente)\n",
     "sequences_aug = {k: build_features(v, W, H) for k, v in sequences_raw_aug.items()}\n",
     "\n",
-    "# 3) Mantén splits por lanzamiento: agrega SOLO los sintéticos al train\n",
-    "all_ids_real = sorted(list(sequences.keys()))  # reales normalizados que ya habías hecho\n",
+    "all_ids_real = sorted(list(sequences.keys())) \n",
     "all_ids_syn  = sorted(list(synthetic_dict.keys()))\n",
     "\n",
-    "# Mantén tus splits reales (train_ids, val_ids, test_ids) y añade sintéticos al train:\n",
     "train_ids_aug = train_ids + all_ids_syn\n",
     "\n",
-    "# 4) Construir datasets con el diccionario ampliado\n",
     "train_ds = BallTrajDataset(sequences_aug, train_ids_aug, T_IN, T_OUT)\n",
     "val_ds   = BallTrajDataset(sequences_aug, val_ids,       T_IN, T_OUT)\n",
     "test_ds  = BallTrajDataset(sequences_aug, test_ids,      T_IN, T_OUT)\n",
@@ -1132,7 +1139,6 @@
     "metrics_csv = run_dir / \"metrics.csv\"\n",
     "df = pd.read_csv(metrics_csv)\n",
     "\n",
-    "# Tomar último valor válido por época\n",
     "def last_valid_per_epoch(df, col):\n",
     "    tmp = df[[\"epoch\", col]].dropna()\n",
     "    return tmp.groupby(\"epoch\").tail(1)\n",
