--- a/tracker.ipynb
+++ b/tracker.ipynb
@@ -106,6 +106,7 @@
     "    imgs = sorted([p for p in folder.glob(\"*.jpg\")])\n",
     "    return imgs\n",
     "\n",
+    "\n",
     "def load_launch_sequences(base_dir: str, min_len: int = 1):\n",
     "    base = Path(base_dir)\n",
     "    launch_dirs = [d for d in base.iterdir() if d.is_dir()]\n",
@@ -755,13 +756,11 @@
     "        else:\n",
     "            loss_acc = 0.0\n",
     "\n",
-    "        # Combinación total\n",
     "        return loss_pos + self.hparams.lambda_v * loss_vel + 0.05 * loss_acc\n",
     "\n",
     "    @torch.no_grad()\n",
     "    def _ade_fde(self, yhat, y):\n",
-    "        # yhat,y: [B, T_out, 2] en espacio normalizado\n",
-    "        err = torch.linalg.vector_norm(yhat - y, dim=-1)  # [B, T_out]\n",
+    "        err = torch.linalg.vector_norm(yhat - y, dim=-1)\n",
     "        ade = err.mean()\n",
     "        fde = err[:, -1].mean()\n",
     "        return ade, fde\n",
@@ -798,39 +797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8) Entrenamiento (EarlyStopping, checkpoints, logging)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 646,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ventanas con sintéticos → train: 3152 val: 309 test: 197\n"
-     ]
-    }
-   ],
-   "source": [
-    "sequences_raw_aug = sequences_raw.copy()\n",
-    "sequences_raw_aug.update(synthetic_dict)\n",
-    "\n",
-    "sequences_aug = {k: build_features(v, W, H) for k, v in sequences_raw_aug.items()}\n",
-    "\n",
-    "all_ids_real = sorted(list(sequences.keys())) \n",
-    "all_ids_syn  = sorted(list(synthetic_dict.keys()))\n",
-    "\n",
-    "train_ids_aug = train_ids + all_ids_syn\n",
-    "\n",
-    "train_ds = BallTrajDataset(sequences_aug, train_ids_aug, T_IN, T_OUT)\n",
-    "val_ds   = BallTrajDataset(sequences_aug, val_ids,       T_IN, T_OUT)\n",
-    "test_ds  = BallTrajDataset(sequences_aug, test_ids,      T_IN, T_OUT)\n",
-    "\n",
-    "print(\"Ventanas con sintéticos →\",\n",
-    "      \"train:\", len(train_ds), \"val:\", len(val_ds), \"test:\", len(test_ds))"
+    "# Entrenamiento (EarlyStopping, checkpoints, logging)"
    ]
   },
   {
@@ -847,19 +814,15 @@
     }
    ],
    "source": [
-    "# 1) Unir a reales (en PIXELES)\n",
     "sequences_raw_aug = sequences_raw.copy()\n",
     "sequences_raw_aug.update(synthetic_hyper)\n",
     "sequences_raw_aug.update(synthetic_para)\n",
     "\n",
-    "# 2) Recalcular features normalizados con tu build_features(...)\n",
     "sequences_aug = {k: build_features(v, W, H) for k, v in sequences_raw_aug.items()}\n",
     "\n",
-    "# 3) ids: SOLO añadimos los sintéticos al TRAIN\n",
     "ids_syn = sorted(list(synthetic_hyper.keys()) + list(synthetic_para.keys()))\n",
     "train_ids_aug = train_ids + ids_syn\n",
     "\n",
-    "# 4) datasets (val/test quedan con reales)\n",
     "train_ds = BallTrajDataset(sequences_aug, train_ids_aug, T_IN, T_OUT)\n",
     "val_ds   = BallTrajDataset(sequences_aug, val_ids,     T_IN, T_OUT)\n",
     "test_ds  = BallTrajDataset(sequences_aug, test_ids,    T_IN, T_OUT)\n",
@@ -1115,7 +1078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10) Gráfica de aprendizaje (loss y ADE/FDE)"
+    "Gráfica de aprendizaje (loss y ADE/FDE)"
    ]
   },
   {
@@ -1159,7 +1122,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 11) Visualización de predicciones "
+    "\n",
+    "# Conclusiones :\n",
+    "\n",
+    "### Tendencia general\n",
+    "\t•\tTodas las métricas (loss, ADE y FDE, tanto de train como de val) muestran una caída rápida en las primeras 10–15 épocas y luego una meseta más estable.\n",
+    "\t•\tEsto es lo esperado: al inicio el modelo ajusta patrones básicos de la dinámica, y después afina detalles.\n",
+    "\n",
+    "### Loss\n",
+    "\t•\tTrain/loss (azul): baja de manera estable hasta casi 0, lo que indica que el modelo logra ajustar muy bien los datos de entrenamiento.\n",
+    "\t•\tVal/loss (naranja): sigue una trayectoria similar, se estabiliza alrededor de ~0.03–0.04, lo que sugiere que no hay sobreajuste fuerte. El gap entre train y val es pequeño.\n",
+    " Interpretación: el modelo generaliza razonablemente bien.\n",
+    "\n",
+    "### ADE (Average Displacement Error)\n",
+    "\t•\tTrain/ADE (verde) y Val/ADE (rojo): ambos descienden hasta ~0.02–0.05.\n",
+    "\t•\tEl ADE mide el error promedio por paso de la trayectoria, y aquí se ve que el modelo mantiene buena precisión a lo largo de todos los frames, con una brecha train–val pequeña.\n",
+    "\n",
+    " El modelo logra predecir trayectorias bastante cercanas a la real en todos los pasos.\n",
+    "\n",
+    "### FDE (Final Displacement Error)\n",
+    "\t•\tTrain/FDE (morado): baja bastante, pero con oscilaciones (lo cual es normal porque depende de un único punto final).\n",
+    "\t•\tVal/FDE (marrón): es la curva más alta, estabilizándose alrededor de ~0.12–0.15.\n",
+    "\t•\tSiempre es mayor que ADE, lo esperado: el error se acumula en el último frame y es más sensible a pequeñas desviaciones.\n",
+    "\n",
+    " El modelo predice bien en promedio, pero aún tiene dificultades para ser muy preciso en el último punto de la trayectoria.\n",
+    "\n",
+    "\n",
+    "### Estabilidad y ruido\n",
+    "\t•\tLas curvas de val muestran más oscilación que las de train, señal de que el conjunto de validación es más reducido y más sensible a la variabilidad entre trayectorias.\n",
+    "\t•\tNo hay señales de divergencia ni de explosión del error: entrenamiento estable.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Conclusión global:\n",
+    "\n",
+    "El modelo está aprendiendo bien, sin sobreajuste evidente. ADE y loss muestran buena convergencia y estabilidad, mientras que FDE se mantiene más alto, lo cual es esperable dado que predecir el punto final de una trayectoria es más difícil. En aplicaciones prácticas, este patrón indica que el modelo es útil para seguir la tendencia general de la pelota, \n",
+    "\n",
+    "En futuras implementaciones para máxima precisión en el impacto final, se podría explorar ajustes como: aumentar T_in, usar un decoder autoregresivo, o dar más peso al FDE en la función de pérdida."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualización de predicciones "
    ]
   },
   {
@@ -1195,7 +1201,7 @@
     "    idxs = random.sample(range(len(dataset)), k=min(k, len(dataset)))\n",
     "    for i in idxs:\n",
     "        X, Y = dataset[i]\n",
-    "        Yhat = model(X.unsqueeze(0)).squeeze(0).cpu()  # [T_out, 2]\n",
+    "        Yhat = model(X.unsqueeze(0)).squeeze(0).cpu() \n",
     "        X = X.cpu(); Y = Y.cpu()\n",
     "\n",
     "        xs_hist, ys_hist = X[:,0].numpy(), X[:,1].numpy()\n",
@@ -1268,6 +1274,45 @@
     "\n",
     "best_cpu = best.to(\"cpu\")\n",
     "visualize_random_grid(best_cpu, test_ds, k=16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Viendo estas 16 trayectorias predichas se pueden sacar varias conclusiones interesantes:\n",
+    "\n",
+    "\n",
+    "1. Tendencia general acertada\n",
+    "\t•\tEn la mayoría de los casos, la red capta bien la forma global de la trayectoria: primero un ascenso curvo y luego la caída, o bien un movimiento horizontal con leve variación vertical.\n",
+    "\t\n",
+    "\t•\tEsto indica que el modelo sí entendió la dinámica general del movimiento de la pelota.\n",
+    "\n",
+    "\n",
+    "2. Desfase en la parte descendente\n",
+    "\t•\tVarias muestras muestran que la predicción (verde) se desvía temprano respecto a la trayectoria real (naranja), especialmente al inicio de la caída.\n",
+    "\t•\tEl modelo suele predecir una caída más suave o más vertical de lo que realmente ocurre.\n",
+    " Esto refleja dificultad en capturar bien la aceleración en la fase descendente.\n",
+    "\n",
+    "\n",
+    "3. Error mayor en el último punto (FDE)\n",
+    "\t•\tSe observa que los primeros pasos de la predicción se acercan bastante al real, pero el último punto se aleja más (ej. muestras 12, 127, 48).\n",
+    "\t•\tEsto es coherente con lo que viste en las curvas de entrenamiento: ADE bajo pero FDE más alto.\n",
+    "\n",
+    "\n",
+    "4. Variabilidad entre muestras\n",
+    "\t•\tAlgunas trayectorias están casi perfectas (ej. 101, 175, 73).\n",
+    "\t•\tOtras muestran desviaciones marcadas (ej. 90, 162), lo que sugiere que ciertos patrones de movimiento (quizás con ángulos más extremos o rebotes) son más difíciles de aprender.\n",
+    "\n",
+    "\n",
+    "5. Posible causa\n",
+    "\t•\tEl modelo resume la historia con pooling mean+max, lo que da robustez pero puede perder detalles finos sobre la aceleración.\n",
+    "\t•\tAdemás, como solo predice posiciones absolutas, tiende a “suavizar” y quedarse corto en cambios bruscos.\n",
+    "\n",
+    "\n",
+    " Conclusión global:\n",
+    "\n",
+    "El modelo predice trayectorias realistas y coherentes en su forma general, con buen ajuste al inicio, pero le cuesta anticipar con precisión la parte final, donde se acumulan los errores. Esto confirma que el entrenamiento logró buen ADE, pero el FDE sigue siendo el reto principal. Para mejorar, convendría reforzar el peso del último paso en la pérdida, probar un decoder autoregresivo o incorporar features físicas (como aceleración vertical esperada por gravedad).\n"
    ]
   }
  ],
