--- a/cnn-gru.ipynb
+++ b/cnn-gru.ipynb
@@ -27,6 +27,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creando Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 316,
    "metadata": {},
@@ -203,6 +210,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DataFrames"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 318,
    "metadata": {},
@@ -318,11 +332,53 @@
    "metadata": {},
    "source": [
     "# LightningModule: CNN encoder → GRU → head\n",
-    "\t•\tCNN sencilla (3 bloques Conv-BN-ReLU + GAP) → embedding E\n",
-    "\t•\tProcesamiento time-distributed: (B*T, 1, H, W) → (B, T, E)\n",
-    "\t•\tGRU → mean+max pooling temporal → head a 2*T_out\n",
-    "\t•\tPérdida con peso al final + suavidad (vel/acc)\n",
-    "\t•\tMétricas: ADE/FDE + Hit@r + AngErr"
+    "\tCNN sencilla (3 bloques Conv-BN-ReLU + GAP) → embedding E\n",
+    "\tProcesamiento time-distributed: (B*T, 1, H, W) → (B, T, E)\n",
+    "\tGRU → mean+max pooling temporal → head a 2*T_out\n",
+    "\tPérdida con peso al final + suavidad (vel/acc)\n",
+    "\tMétricas: ADE/FDE + Hit@r + AngErr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```mermaid\n",
+    "flowchart TD\n",
+    "    A[\"Input<br/>X: B × T_in × 1 × 64 × 64<br/>H_feat: B × T_in × d\"]\n",
+    "    \n",
+    "    %% CNN Encoder por frame\n",
+    "    A --> B[\"CNN Encoder (por frame)<br/>Conv2D → BN → ReLU → Pool<br/>Conv2D → BN → ReLU → Pool<br/>Conv2D → BN → ReLU → GAP → Linear(64)\"]\n",
+    "    B --> C[\"E: B × T_in × 64\"]\n",
+    "\n",
+    "    %% Proyección de atributos históricos\n",
+    "    A --> D[\"Linear(d→16) + ReLU\"]\n",
+    "    D --> E[\"H_emb: B × T_in × 16\"]\n",
+    "\n",
+    "    %% Fusión\n",
+    "    C --> F[\"Concatenar (E + H_emb)\"]\n",
+    "    E --> F\n",
+    "    F --> G[\"Seq: B × T_in × 80\"]\n",
+    "\n",
+    "    %% GRU\n",
+    "    G --> H[\"GRU<br/>(input=80, hidden=64, layers=2, dropout=0.2)\"]\n",
+    "    H --> I[\"Out: B × T_in × 64\"]\n",
+    "\n",
+    "    %% Pooling temporal\n",
+    "    I --> J[\"AvgPool_t(Out)\"]\n",
+    "    I --> K[\"MaxPool_t(Out)\"]\n",
+    "    J --> L[\"z = 0.5*(mean+max)\"]\n",
+    "    K --> L\n",
+    "\n",
+    "    %% Predicción de deltas\n",
+    "    L --> M[\"Linear(64→2×T_out)\"]\n",
+    "    M --> N[\"Δ: B × T_out × 2\"]\n",
+    "\n",
+    "    %% Integración acumulada\n",
+    "    N --> O[\"cumsum + y0<br/>(última observación)\"]\n",
+    "    O --> P[\"ŷ: B × T_out × 2\"]\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -554,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Split"
+    "# Split Data "
    ]
   },
   {
@@ -587,6 +643,13 @@
     "\n",
     "print(\"Split por lanzamiento:\")\n",
     "print(\"Train:\", len(train_ids), \"Val:\", len(val_ids), \"Test:\", len(test_ids))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train"
    ]
   },
   {
@@ -850,6 +913,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grafica de Proyeccion vs Real "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 324,
    "metadata": {},
@@ -923,7 +993,7 @@
     "    ax.plot(y[:,0],   y[:,1],   '-x', label='Futuro real (T_out)')\n",
     "    ax.plot(yhat[:,0],yhat[:,1],'-o', label='Predicción (T_out)')\n",
     "    ax.set_xlim(0,1); ax.set_ylim(0,1)\n",
-    "    ax.invert_yaxis()  # quítalo si quieres ver en coordenadas cartesiano (y arriba)\n",
+    "    ax.invert_yaxis()  \n",
     "    ax.grid(True, ls='--', alpha=0.4)\n",
     "    if title: ax.set_title(title)\n",
     "    ax.set_ylim(ax.get_ylim()[::-1])\n",
@@ -1074,6 +1144,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Datos Historicos de Entrenamiento"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 327,
    "metadata": {},
@@ -1101,8 +1178,6 @@
     "    \"train/loss\", \"val/loss\",\n",
     "    \"train/ADE\",  \"val/ADE\",\n",
     "    \"train/FDE\",  \"val/FDE\",\n",
-    "    # \"train/Hit@0.02\", \"val/Hit@0.02\",\n",
-    "    # \"train/AngErr_deg\", \"val/AngErr_deg\",\n",
     "]\n",
     "\n",
     "versions = sorted(\n",
